Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40714

Qt aborts when the server returns an empty protocol list in NPN extension

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.2, 5.5.0
    • 5.3.0, 5.3.1, 5.5.0
    • Network: SSL
    • None
    • Only tested on Linux, but doesn't seem OS dependent.
    • 3c24dddaf963026c6e3cd90dd7d538dfa8044c83

    Description

      When requesting a page from a SSL server which use NPN but doesn't provide any protocol in the extension list, Qt aborts with the following message:


      Error: chosen Next Protocol Negotiation value unsupported
      ASSERT: "!protocolHandler.isNull()" in file access/qhttpnetworkconnectionchannel.cpp, line 204


      The issue is the same problem that this one in Chromium, which provides some websites to test it.

      Attachments

        1. npntest.cpp
          3 kB
        2. npntest.pro
          0.1 kB
        3. qtdiag
          3 kB
        For Gerrit Dashboard: QTBUG-40714
        # Subject Branch Project Status CR V

        Activity

          People

            peter-har Peter Hartmann
            lobr Louis Brunner
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes