SSL NPN negotiation: Do not abort on unmatched protocols

... but choose HTTP/1.1 and continue connecting anyhow. According to
the NPN spec, actually we should choose SPDY:

"In the event that the client doesn't support any of server's protocols,
or the server doesn't advertise any, it SHOULD select the first protocol
that it supports."

However, some tested servers did not advertise anything and did not
support SPDY, so blindly trying the newest protocol would fail. We are
conservative in that case and choose HTTP.

Task-number: QTBUG-40714
Change-Id: Ia8aaf01fea74e13d9e4416306f85f1890b25559e
Reviewed-by: Richard J. Moore <rich@kde.org>

cregit: 3c24dddaf963026c6e3cd90dd7d538dfa8044c83 https://github.com/qt/qtbase/commit/3c24dddaf963026c6e3cd90dd7d538dfa8044c83